update api path spec and models
